<resources>
    <string name="app_name">lab05</string>

<!--    <string name="switch_theme_to_dark">Dark Theme</string>-->

    <string name="open_second_activity">Open Second Activity</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="exit_app">Exit App</string>

    <string name="check1_str">Check 1</string>
    <string name="check2_str">Check 2</string>


    <!-- Second Activity -->
    <string name="ok">Ok</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>