<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="Type here"
        android:inputType="text"
        android:textColorHint="#919191"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/check1_str"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/check2_str"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="322dp"
        android:layout_height="189dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnOpenSecondActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:onClick="openSecondActivity"
            android:text="@string/open_second_activity"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnOpenDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:onClick="openDialog"
            android:text="@string/open_dialog"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnExitApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:onClick="exitApp"
            android:text="@string/exit_app"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>